--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,8 @@ compose = "1.5.4"
 compose-material3 = "1.1.2"
 androidx-activityCompose = "1.8.0"
 kotlinxDatetime = "0.4.0"
-runtime = "2.0.2"
+runtime = "1.5.3"
+material3Android = "1.3.1"
 
 
 [libraries]
@@ -35,6 +36,7 @@ native-driver = { module = "app.cash.sqldelight:native-driver", version.ref = "r
 runtime = { module = "app.cash.sqldelight:runtime", version.ref = "runtime" }
 viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version = "2.8.7" }
 viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version = "2.8.7" }
+androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
